[package]
name = "udprelay-rust"
version = "0.1.0"
edition = "2021"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
daemonize-me = "2.0.1"


[profile.release]
strip = true
opt-level = "z"  # optimize for size
lto = true
codegen-units = 1
panic = "abort"